# GMPHD_MAF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GMPHD_MAF/: GMPHD_MAF.cpp  GMPHD_MAF.h  OnlineTracker.cpp  OnlineTracker.h  VOT.h  demo_GMPHD_MAF.cpp  drawing.cpp  drawing.hpp  ffttools.hpp  fhog.cpp  hungarian.cpp  io_mots.cpp  io_mots.hpp  kcftracker.cpp  kcftracker.hpp  local_types.hpp  mask_api.cpp  mask_api.h  params.hpp  recttools.hpp  types.hpp
GMPHD_MAF/res/KITTI_MOTS/train/: _speed_maskrcnn.txt
GMPHD_MAF/seq/: KITTI_MOTS_test.txt  KITTI_MOTS_train.txt  MOTS20_test.txt  MOTS20_train.txt
